# gorlami

./: .gitignore  .prettierignore  CLAUDE.md  PROGRESS_TRACKING.md  README.md  STAGE_2_ROADMAP.md  TEST_RESULTS.md  cursor_agent.txt
.claude/: settings.local.json
app/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml
app/src/: App.css  App.tsx  index.css  theme.css  vite-env.d.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: generate_tray_icons.py
app/src-tauri/src/: audio.rs  clipboard.rs  error_handler.rs  lib.rs  main.rs  oauth.rs  settings.rs  shortcuts.rs  simple_audio.rs  tray.rs  updater.rs  websocket.rs
app/src/assets/icons/: ActivityIcon.tsx  DictionaryIcon.tsx  GitHubIcon.tsx  GoogleIcon.tsx  GorlamiLogoIcon.tsx  HomeIcon.tsx  SettingsIcon.tsx  SignOutIcon.tsx  index.ts
app/src/components/: Dashboard.css  Dashboard.tsx  ErrorDisplay.css  ErrorDisplay.tsx  MainLayout.css  MainLayout.tsx  ProcessingOverlay.css  ProcessingOverlay.tsx  ProtectedRoute.tsx  SettingsWindow.css  SettingsWindow.tsx  ShortcutField.tsx  Sidebar.css  Sidebar.tsx  UpdateBanner.tsx  UpdateNotification.tsx  UserMenu.tsx
app/src/config/: env.ts
app/src/contexts/: AuthContext.tsx
app/src/hooks/: useAutoUpdater.ts
app/src/layouts/: MainLayout.css  MainLayout.tsx
app/src/pages/: Activity.css  Activity.tsx  Dashboard.css  Dashboard.tsx  Dictionary.css  Dictionary.tsx  Login.tsx  Settings.tsx
app/src/services/: auth.ts  websocket.ts
app/src/utils/: logger.ts
backend/: .env.example  config.py  main.py  pyproject.toml
backend/schemas/: api_models.py  database.py
backend/services/: deepgram.py  openai.py  supabase.py
backend/utils/: auth.py
docs/: 2025_07_14_InitialSpecs.md
