[tool.poetry]
name = "gorlami-backend"
version = "0.1.0"
description = "Gorlami App Backend Server"
authors = ["Gorlami.ai Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
pydantic = "^2.11.7"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
websockets = "^14.0"
deepgram-sdk = "^4.6.0"
openai = "^1.51.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
