[tool.poetry]
name = "gorlami-backend"
version = "0.1.0"
description = "Gorlami App Backend Server"
authors = ["Gorlami.ai Team"]
packages = [{include = "*"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
pydantic = "^2.11.7"
pydantic-settings = "^2.7.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
websockets = "^14.0"
deepgram-sdk = "^4.6.0"
openai = "^1.51.0"
supabase = "^2.16.0"

[tool.poetry.scripts]
start = "main:start_server"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
