[package]
name = "gorlami"
version = "0.1.0"
description = "Voice-driven AI assistant for macOS"
authors = ["Gustav Hartz"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gorlami_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whoami = "1.5"
anyhow = "1.0.98"
cpal = "0.16.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"
dirs = "5.0"
arboard = "3.4"
tauri-plugin-process = "2.3.0"
tauri-plugin-oauth = "2.0.0"
tauri-plugin-dialog = "2.3.0"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-global-shortcut = "2.3.0"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.9.0"

[dependencies.log]
version = "0.4"

[dependencies.env_logger]
version = "0.11"

